# Robust-Implicit-Surface-Networks

./: CMakeLists.txt  README.md
app/: csg.cpp  implicit_arrangement.cpp  material_interface.cpp
cmake/: absl.cmake  filesystem.cmake  implicit_functions.cmake  nlohmann-json.cmake  simplicial_arrangement.cmake
examples/BSH/figure1/(b)/input/: config-IA.json
examples/Fig13/varying_grid_resolution/1000k/: config.json
examples/Fig13/varying_grid_resolution/100k/: config.json
examples/Fig13/varying_grid_resolution/200k/: config.json
examples/Fig13/varying_grid_resolution/300k/: config.json
examples/Fig13/varying_grid_resolution/400k/: config.json
examples/Fig13/varying_grid_resolution/500k/: config.json
examples/Fig13/varying_grid_resolution/600k/: 4-sphere.json  config.json
examples/Fig13/varying_grid_resolution/700k/: config.json
examples/Fig13/varying_grid_resolution/800k/: config.json
examples/Fig13/varying_grid_resolution/900k/: config.json
examples/Fig13/varying_num_functions/10/: 10-sphere.json  config.json
examples/Fig13/varying_num_functions/11/: 11-sphere.json  config.json
examples/Fig13/varying_num_functions/12/: 12-sphere.json  config.json
examples/Fig13/varying_num_functions/13/: 13-sphere.json  config.json
examples/Fig13/varying_num_functions/14/: 14-sphere.json  config.json
examples/Fig13/varying_num_functions/15/: 15-sphere.json  config.json
examples/Fig13/varying_num_functions/16/: 16-sphere.json  config.json
examples/Fig13/varying_num_functions/17/: 17-sphere.json  config.json
examples/Fig13/varying_num_functions/18/: config.json
examples/Fig13/varying_num_functions/5/: 5-sphere.json  config.json
examples/Fig13/varying_num_functions/6/: 6-sphere.json  config.json
examples/Fig13/varying_num_functions/7/: 7-sphere.json  config.json
examples/Fig13/varying_num_functions/8/: 8-sphere.json  config.json
examples/Fig13/varying_num_functions/9/: 9-sphere.json  config.json
examples/Fig14/nested_spheres/cell_grouping/2/: config.json
examples/Fig14/nested_spheres/cell_grouping/3/: 3-concentric.json  config.json
examples/Fig14/nested_spheres/cell_grouping/4/: 4-concentric.json  config.json
examples/Fig14/nested_spheres/cell_grouping/5/: 5-concentric.json  config.json
examples/Fig14/nested_spheres/cell_grouping/6/: config.json
examples/Fig14/nested_spheres/cell_grouping/7/: config.json
examples/Fig14/nested_spheres/cell_grouping/8/: config.json
examples/Fig14/nested_spheres/topo_ray_shooting/2/: config.json
examples/Fig15/varying_grid_resolution/1000k/: config.json
examples/Fig15/varying_grid_resolution/100k/: 4-sphere.json  config.json
examples/Fig15/varying_grid_resolution/200k/: config.json
examples/Fig15/varying_grid_resolution/300k/: config.json
examples/Fig15/varying_grid_resolution/400k/: config.json
examples/Fig15/varying_grid_resolution/500k/: config.json
examples/Fig15/varying_grid_resolution/600k/: config.json
examples/Fig15/varying_grid_resolution/700k/: config.json
examples/Fig15/varying_grid_resolution/800k/: config.json
examples/Fig15/varying_grid_resolution/900k/: config.json
examples/Fig15/varying_num_functions/10/: 10-sphere.json  config.json
examples/Fig15/varying_num_functions/11/: 11-sphere.json  config.json
examples/Fig15/varying_num_functions/12/: 12-sphere.json  config.json
examples/Fig15/varying_num_functions/13/: 13-sphere.json  config.json
examples/Fig15/varying_num_functions/14/: 14-sphere.json  config.json
examples/Fig15/varying_num_functions/15/: 15-sphere.json  config.json
examples/Fig15/varying_num_functions/16/: 16-sphere.json  config.json
examples/Fig15/varying_num_functions/17/: 17-sphere.json  config.json
examples/Fig15/varying_num_functions/18/: config.json
examples/Fig15/varying_num_functions/5/: 5-sphere.json  config.json
examples/Fig15/varying_num_functions/6/: 6-sphere.json  config.json
examples/Fig15/varying_num_functions/7/: 7-sphere.json  config.json
examples/Fig15/varying_num_functions/8/: 8-sphere.json  config.json
examples/Fig15/varying_num_functions/9/: 9-sphere.json  config.json
examples/Fig16/IA/without_2func_look_up/: config.json
examples/Fig16/MI/without_3func_look_up/: 18-sphere.json  config.json
examples/Fig17/shifted_spheres/: 2-shift-1e-2.json  config.json
examples/Fig18/4_Appolonius_diagram/: 4-spheres.json  config.json
examples/Fig18/shifted_spheres/: 2-shifted-spheres.json  config.json
examples/Fig19_teaser_left/101/: config.json  inverseCSG-101.json
examples/Fig19_teaser_left/112/: config.json  inverseCSG-112.json
examples/Fig19_teaser_left/156/: config.json  inverseCSG-156.json
examples/Fig19_teaser_left/158/: config.json  inverseCSG-158.json
examples/Fig19_teaser_left/167/: config.json  inverseCSG-167.json
examples/Fig20_teaser_right/20-linked-Villarceau-Plus-circles/: 20-linked-Villarceau-Plus-circles.json  config.json
examples/Fig20_teaser_right/20-rotate-lines/: 20-rotate-lines.json  config.json
examples/Fig20_teaser_right/21-mobius-lines/: 21-mobius-lines.json  config.json
examples/Fig20_teaser_right/5-rotate-lines/: 5-rotate-lines.json  config.json
examples/Table2_Fig11/IA/1e-6/0/: functions.json
examples/implicit_arrangement/: config.json
examples/material_interface/: config.json
examples/shader/: config.json
examples/tests/: 1-plane.json  1-sphere.json  2-planesphere.json  2-sphere.json  3-planesphere.json  3-sphere-1.json  3-sphere-2.json  3-sphere-3.json  3-sphere-4.json  3-sphere-5.json  8-sphere.json  csg_tree_1.json  csg_tree_2.json  csg_tree_4.json  mesh.json  mesh_fail.json
implicit_functions/: CMakeLists.txt  implicit_functions.cpp  implicit_functions.h
src/: cell_connectivity.cpp  cell_connectivity.h  csg.cpp  csg.h  extract_mesh.cpp  extract_mesh.h  implicit_arrangement.cpp  implicit_arrangement.h  io.cpp  io.h  material_interface.cpp  material_interface.h  mesh.h  mesh_connectivity.cpp  mesh_connectivity.h  msh_io.h  pair_faces.cpp  pair_faces.h  robust_implicit_networks.h  topo_ray_shooting.cpp  topo_ray_shooting.h
tests/: test_implicit_networks.cpp
(+831 files in other folders)
